# froggo

./: CONTRIBUTING.md  README.md  pyproject.toml
src/: README.md  froggo.py  pyproject.toml  setup.py
src/aws/: aws.py
src/commands/: db.py
src/commands/aurora/: aurora.py
src/commands/aurora/terraform/: .terraform.lock.hcl  init.sql  main.tf  variables.tf  versions.tf
src/commands/db/: db.py
src/commands/db/terraform/: main.tf  variables.tf
src/commands/user/: user.py
src/commands/user/terraform/: .terraform.lock.hcl  main.tf  variables.tf
src/db/: db.py
src/db/terraform/: .terraform.lock.hcl  main.tf
src/froggo.egg-info/: PKG-INFO  SOURCES.txt
src/greet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
