[project]
name = "froggo"
version = "0.1.0"
description = "A CLI tool for Frogtek daily infrastructure needs"
authors = [
    {name = "javicps",email = "javicps@gmail.com"}
]
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.1.8,<9.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
froggo = "froggo:cli"
